--- a/style.css
+++ b/style.css
@@ -215,6 +215,16 @@ body.category .post.post_format-post-format-image .entry-content img{
 }
 
 
+#comments {
+    position: relative;
+    margin-bottom: 30px;
+    border-bottom: 3px double #D6D6D6;
+    padding: 22px 25px 20px;
+    background: #fff;
+    box-shadow: 0px 0px 2px rgba(0,0,0,0.1);
+}
+
+
 
 
 /*--------------------------------------------------------------
