--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1842,6 +1842,9 @@ object {
     background-color: #ffffff;
     border-radius: 3px;
 }
+.main-navigation li ul li{
+	margin-right: 0;
+}
 .main-navigation a {
     display: block;
     text-decoration: none;
@@ -1871,7 +1874,7 @@ object {
 	left: -999em;
 	top: 0;
 }
-.main-navigation ul ul a {
+.main-navigation ul ul li {
 	width: 200px;
 }
 .main-navigation ul ul li {
@@ -1928,22 +1931,25 @@ a.responsive-menu-close{
     background-color: #222;
 	
 }
-.admin-bar a.responsive-menu-close{
-	margin-top:30px;	
-}
 a.responsive-menu-close:hover{
 	background-color:#333;
 	color: #fff;
 }
+.mobile-menu-active{
+	overflow:hidden;	
+}
 .responsive-menu{
-	position: absolute;
+	position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     background: #fff;
 	display:none;
-	z-index:99999;
+	z-index:999999;
+	overflow:scroll;
+	overflow-y:scroll;
+	overflow-x: auto;
 }
 .responsive-menu ul{
 	margin: 0;
@@ -1975,7 +1981,7 @@ a.responsive-menu-close:hover{
 	text-align: center;
 	line-height: 40px;
 	cursor: pointer;
-	font-size: 30px;
+	font-size: 20px;
     border-left:solid 1px #E9EDF1;
 }
 .responsive-menu ul li ul{ margin:0; padding:0; }
@@ -1989,11 +1995,6 @@ a.responsive-menu-close:hover{
 	}
 	.main-navigation{
 		display: none;
-	}
-}
-@media screen and (max-width: 782px){
-	.admin-bar a.responsive-menu-close{
-		margin-top:46px;	
 	}
 }
 
@@ -2319,4 +2320,142 @@ body .wpb_content_element{
     position: fixed;
     top: 20px;
     right: 20px;	
+}
+
+
+/*--------------------------------------------------------------
+# Preloader 
+--------------------------------------------------------------*/
+.steed-preloader{
+	position:fixed;
+	height:100%;
+	width:100%;
+	left:0;
+	top:0;
+	background:#fff;
+	z-index: 99999999;	
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.sk-circle {
+  margin: 100px auto;
+  width: 40px;
+  height: 40px;
+  position: relative;
+}
+.sk-circle .sk-child {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.sk-circle .sk-child:before {
+  content: '';
+  display: block;
+  margin: 0 auto;
+  width: 15%;
+  height: 15%;
+  background-color: #333;
+  border-radius: 100%;
+  -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+          animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+}
+.sk-circle .sk-circle2 {
+  -webkit-transform: rotate(30deg);
+      -ms-transform: rotate(30deg);
+          transform: rotate(30deg); }
+.sk-circle .sk-circle3 {
+  -webkit-transform: rotate(60deg);
+      -ms-transform: rotate(60deg);
+          transform: rotate(60deg); }
+.sk-circle .sk-circle4 {
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg); }
+.sk-circle .sk-circle5 {
+  -webkit-transform: rotate(120deg);
+      -ms-transform: rotate(120deg);
+          transform: rotate(120deg); }
+.sk-circle .sk-circle6 {
+  -webkit-transform: rotate(150deg);
+      -ms-transform: rotate(150deg);
+          transform: rotate(150deg); }
+.sk-circle .sk-circle7 {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg); }
+.sk-circle .sk-circle8 {
+  -webkit-transform: rotate(210deg);
+      -ms-transform: rotate(210deg);
+          transform: rotate(210deg); }
+.sk-circle .sk-circle9 {
+  -webkit-transform: rotate(240deg);
+      -ms-transform: rotate(240deg);
+          transform: rotate(240deg); }
+.sk-circle .sk-circle10 {
+  -webkit-transform: rotate(270deg);
+      -ms-transform: rotate(270deg);
+          transform: rotate(270deg); }
+.sk-circle .sk-circle11 {
+  -webkit-transform: rotate(300deg);
+      -ms-transform: rotate(300deg);
+          transform: rotate(300deg); }
+.sk-circle .sk-circle12 {
+  -webkit-transform: rotate(330deg);
+      -ms-transform: rotate(330deg);
+          transform: rotate(330deg); }
+.sk-circle .sk-circle2:before {
+  -webkit-animation-delay: -1.1s;
+          animation-delay: -1.1s; }
+.sk-circle .sk-circle3:before {
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s; }
+.sk-circle .sk-circle4:before {
+  -webkit-animation-delay: -0.9s;
+          animation-delay: -0.9s; }
+.sk-circle .sk-circle5:before {
+  -webkit-animation-delay: -0.8s;
+          animation-delay: -0.8s; }
+.sk-circle .sk-circle6:before {
+  -webkit-animation-delay: -0.7s;
+          animation-delay: -0.7s; }
+.sk-circle .sk-circle7:before {
+  -webkit-animation-delay: -0.6s;
+          animation-delay: -0.6s; }
+.sk-circle .sk-circle8:before {
+  -webkit-animation-delay: -0.5s;
+          animation-delay: -0.5s; }
+.sk-circle .sk-circle9:before {
+  -webkit-animation-delay: -0.4s;
+          animation-delay: -0.4s; }
+.sk-circle .sk-circle10:before {
+  -webkit-animation-delay: -0.3s;
+          animation-delay: -0.3s; }
+.sk-circle .sk-circle11:before {
+  -webkit-animation-delay: -0.2s;
+          animation-delay: -0.2s; }
+.sk-circle .sk-circle12:before {
+  -webkit-animation-delay: -0.1s;
+          animation-delay: -0.1s; }
+
+@-webkit-keyframes sk-circleBounceDelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  } 40% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes sk-circleBounceDelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  } 40% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
