Improving CSS commenting

--- a/assets/css/pc.css
+++ b/assets/css/pc.css
@@ -1,3 +1,6 @@
+/*
+	Section Common
+----------------------------------------------------*/
 .steed_pc_section:after, 
 .steed_pc_section:before, 
 .steed_pc_section_in:after, 
@@ -33,6 +36,10 @@
 }
 
 
+
+/*
+	Button
+----------------------------------------------------*/
 .pc-button{
 	display:inline-block;
 	padding: 10px 25px;
@@ -564,3 +571,39 @@
 		clear: left;
 	}
 }
+
+
+
+/*
+	Hero Slider Common
+-----------------------------------------------------*/
+
+
+
+/*
+	Hero Slider Skin 1
+-----------------------------------------------------*/
+
+
+
+/*
+	Services Grid Common
+-----------------------------------------------------*/
+
+
+
+/*
+	Services Grid Skin 1
+-----------------------------------------------------*/
+
+
+
+/*
+	Testimonials Slider Common
+-----------------------------------------------------*/
+
+
+
+/*
+	Testimonials Slider Skin 1
+-----------------------------------------------------*/
