--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -331,26 +331,32 @@ big {
 h1{
 	font-size:45px;
 	line-height: 1.3;
+	margin-bottom:15px;
 }
 h2{
 	font-size:45px;
 	line-height: 1.3;
+	margin-bottom:15px;
 }
 h3{
 	font-size:35px;
 	line-height: 1.3;
+	margin-bottom:15px;
 }
 h4{
 	font-size:24px;
 	line-height: 1.3;
+	margin-bottom:15px;
 }
 h5{
 	font-size:18px;
 	line-height: 1.3;
+	margin-bottom:10px;
 }
 h6{
 	font-size:12px;
 	line-height: 1.3;
+	margin-bottom:10px;
 }
 
 
